# structure-column-performance

./: .gitignore  Cargo.toml  LICENSE  README.md  devenv.nix  devenv.yaml  run_benchmark.sh
benches/: storage_comparison.rs
migrations/: 001_init.sql  001_init_mysql.sql  20240830_001_init.sql
scripts/: benchmark.sh  setup_mysql_data.sql  setup_test_data.sql
src/: data_generator.rs  main.rs
