[package]
name = "structure-column-performance"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mysql", "json", "time"] }
time = { version = "0.3", features = ["serde"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
criterion = "0.5"

[[bench]]
name = "storage_comparison"
harness = false